--- a/index.html
+++ b/index.html
@@ -847,9 +847,9 @@
                             </div><!-- end info-icon-box -->
                         </div><!-- end col-lg-4 -->
                     </div><!-- end row -->
-                    <div class="btn-box">
+                    <!--div class="btn-box">
                         <a href="about.html" class="btn theme-btn">Learn More <i class="la la-arrow-right icon ml-1"></i></a>
-                    </div><!-- end btn-box -->
+                    </div--><!-- end btn-box -->
                 </div><!-- end about-content -->
             </div><!-- end col-lg-6 -->
             <div class="col-lg-5 ml-auto">
