--- a/index.html
+++ b/index.html
@@ -882,9 +882,9 @@
                 <h5 class="ribbon ribbon-lg mb-2">Start online learning</h5>
                 <h2 class="section__title fs-45 lh-55">Enhance Your Skills with <br> Best Online Courses</h2>
             </div><!-- end section-heading -->
-            <div class="cat-btn-box mt-28px">
+            <!--div class="cat-btn-box mt-28px">
                 <a href="sign-up.html" class="btn theme-btn">Get Started <i class="la la-arrow-right icon ml-1"></i></a>
-            </div><!-- end cat-btn-box -->
+            </div>< end cat-btn-box -->
         </div><!-- end cta-content-wrap -->
     </div><!-- end container -->
 </section><!-- end cta-area -->
@@ -892,7 +892,91 @@
         END CTA AREA
 ======================================-->
 
-
+<!-- ================================
+       START PACKAGE AREA
+================================= -->
+<section class="package-area section--padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 responsive-column-half">
+                <div class="card card-item">
+                    <div class="card-body">
+                        <div class="package-price-box border-bottom border-bottom-gray pb-4 mb-4">
+                            <h3 class="fs-45 font-weight-semi-bold pb-2"><span>$</span>219</h3>
+                            <h4 class="fs-20 font-weight-semi-bold">Basic Plan</h4>
+                        </div><!-- end package-price-box -->
+                        <ul class="generic-list-item">
+                            <li><i class="la la-check text-success mr-2"></i> 3 Courses</li>
+                            <li><i class="la la-check text-success mr-2"></i> Mathematics</li>
+                            <li><i class="la la-check text-success mr-2"></i>English Language</li>
+                            <li><i class="la la-check text-success mr-2"></i> Frnech</li>
+                            <!--li><i class="la la-check text-success mr-2"></i> Lifetime free access</li>
+                            <li><i class="la la-close text-danger mr-2"></i> Limited Period Offer</li>
+                            <li><i class="la la-close text-danger mr-2"></i> Upgrade Options</li>
+                            <li><i class="la la-close text-danger mr-2"></i> 9 Days Time</li-->
+                        </ul>
+                        <div class="price-btn-box pt-30px">
+                            <a href="#" class="btn theme-btn theme-btn-transparent w-100">Choose Plan <i class="la la-arrow-right icon ml-1"></i></a>
+                            <p class="text-uppercase fs-13 pt-2">no hidden charges!</p>
+                        </div>
+                    </div><!-- end card-body -->
+                </div><!-- end card -->
+            </div><!-- end col-lg-4 -->
+            <div class="col-lg-4 responsive-column-half">
+                <div class="card card-item package-item-active">
+                    <div class="card-body">
+                        <span class="package-tooltip">Recommended</span>
+                        <div class="package-price-box border-bottom border-bottom-gray pb-4 mb-4">
+                            <h3 class="fs-45 font-weight-semi-bold pb-2"><span>$</span>319</h3>
+                            <h4 class="fs-20 font-weight-semi-bold">Business Plan</h4>
+                        </div><!-- end package-price-box -->
+                        <ul class="generic-list-item">
+                            <li><i class="la la-check text-success mr-2"></i> 4 Courses</li>
+                            <li><i class="la la-check text-success mr-2"></i> Mathematics</li>
+                            <li><i class="la la-check text-success mr-2"></i> English Language</li>
+                            <li><i class="la la-check text-success mr-2"></i> French</li>
+                            <li><i class="la la-check text-success mr-2"></i> Coding</li>
+                            <!--li><i class="la la-close text-success mr-2"></i> </li>
+                            <li><i class="la la-close text-danger mr-2"></i> Upgrade Options</li>
+                            <li><i class="la la-close text-danger mr-2"></i> 9 Days Time</li-->
+                        </ul>
+                        <div class="price-btn-box pt-30px">
+                            <a href="#" class="btn theme-btn w-100">Choose Plan <i class="la la-arrow-right icon ml-1"></i></a>
+                            <p class="text-uppercase fs-13 pt-2">no hidden charges!</p>
+                        </div>
+                    </div><!-- end card-body -->
+                </div><!-- end card -->
+            </div><!-- end col-lg-4 -->
+            <div class="col-lg-4 responsive-column-half">
+                <div class="card card-item">
+                    <div class="card-body">
+                        <div class="package-price-box border-bottom border-bottom-gray pb-4 mb-4">
+                            <h3 class="fs-45 font-weight-semi-bold pb-2"><span>$</span>519</h3>
+                            <h4 class="fs-20 font-weight-semi-bold">Premium Plan</h4>
+                        </div><!-- end package-price-box -->
+                        <ul class="generic-list-item">
+                            <li><i class="la la-check text-success mr-2"></i> 5 Courses</li>
+                            <li><i class="la la-check text-success mr-2"></i> Mathematics</li>
+                            <li><i class="la la-check text-success mr-2"></i> English Language</li>
+                            <li><i class="la la-check text-success mr-2"></i> French</li>
+                            <li><i class="la la-check text-success mr-2"></i> Yoruba</li>
+                            <li><i class="la la-check text-success mr-2"></i> Coding</li>
+                            <!--li><i class="la la-close text-danger mr-2"></i> Upgrade Options</li>
+                            <li><i class="la la-close text-danger mr-2"></i> 9 Days Time</li-->
+                        </ul>
+                        <div class="price-btn-box pt-30px">
+                            <a href="#" class="btn theme-btn theme-btn-transparent w-100">Choose Plan <i class="la la-arrow-right icon ml-1"></i></a>
+                            <p class="text-uppercase fs-13 pt-2">no hidden charges!</p>
+                        </div>
+                    </div><!-- end card-body -->
+                </div><!-- end card -->
+            </div><!-- end col-lg-4 -->
+        </div><!-- end row -->
+    </div><!-- end container -->
+</section><!-- end package-area -->
+<!-- ================================
+       START PACKAGE AREA
+================================= -->
 
 <div class="section-block"></div>
 <!--======================================
@@ -961,7 +1045,7 @@
             <div class="col-lg-5">
                 <div class="card card-item">
                     <div class="card-body">
-                        <h3 class="fs-24 font-weight-semi-bold pb-2">Receive Free Courses</h3>
+                        <h3 class="fs-24 font-weight-semi-bold pb-2">Register with Lurnhow today!</h3>
                         <div class="divider"><span></span></div>
                         <form method="post">
                             <div class="input-box">
@@ -1006,7 +1090,7 @@
                         <h2 class="section__title">Get ahead with Learning Paths. Stay Sharp.</h2>
                         <span class="section-divider"></span>
                         <p class="section__desc">Education is the process of acquiring the body of knowledge and skills 
-                            that people are expected have in your society. Education develops a critical thought process 
+                            that people are expected to have in your society. Education develops a critical thought process 
                             in addition to learning. </p>
                     </div><!-- end section-heading -->
                     <div class="btn-box pt-35px">
@@ -1073,7 +1157,7 @@
                         <li><a href="#">French</a></li>
                         <li><a href="#">Mathematics</a></li>
                         <li><a href="#">English</a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">Coding</a></li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div><!-- end footer-item -->
@@ -1096,7 +1180,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <p class="copy-desc">Copyright &copy; 2023 <a href="https://totalitnigeria.com/">Total I.T Nigeria</a>Ltd.</p>
+                    <p class="copy-desc">Copyright &copy; 2023 <a href="https://sessipaul.com/">Lurnhow</a></p>
                 </div><!-- end col-lg-6 -->
                 <div class="col-lg-6">
                     <div class="d-flex flex-wrap align-items-center justify-content-end">
