--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                         <span class="package-tooltip">Recommended</span>
                         <div class="package-price-box border-bottom border-bottom-gray pb-4 mb-4">
                             <h3 class="fs-45 font-weight-semi-bold pb-2"><span>$</span>319</h3>
-                            <h4 class="fs-20 font-weight-semi-bold">Business Plan</h4>
+                            <h4 class="fs-20 font-weight-semi-bold">Intermediary Plan</h4>
                         </div><!-- end package-price-box -->
                         <ul class="generic-list-item">
                             <li><i class="la la-check text-success mr-2"></i> 4 Courses</li>
