--- a/contact.html
+++ b/contact.html
@@ -680,7 +680,7 @@
                     </div>
                     <h3 class="info__title">Email Us</h3>
                     <p class="info__text">support@lurnhow.com</p>
-                    <p class="info__text">info123@example.com</p>
+                    <p class="info__text">contact@lurnhow.com</p>
                 </div><!-- end info-box -->
             </div><!-- end col-lg-3 -->
             <div class="col-lg-4 responsive-column-half">
@@ -814,7 +814,7 @@
                         <li><a href="#">French</a></li>
                         <li><a href="#">Mathematics</a></li>
                         <li><a href="#">English</a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#"></a>Coding</li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div><!-- end footer-item -->
@@ -854,7 +854,7 @@
                         <a href="index.html" class="pr-4">
                             <img src="images/lhlogo.png" alt="footer logo" class="footer__logo">
                         </a>
-                        <p class="copy-desc">Copyright &copy; 2023 <a href="https://totalitnigeria.com/">Total I.T Nigeria</a>Ltd.</p>
+                        <p class="copy-desc">Copyright &copy; 2023 <a href="https://sessipaul.com/">Lurnhow</a></p>
                     </div>
                 </div><!-- end col-lg-6 -->
                 <div class="col-lg-6">
