--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                     <div class="card-body">
                         <h3 class="fs-24 font-weight-semi-bold pb-2">Register with Lurnhow today!</h3>
                         <div class="divider"><span></span></div>
-                        <form method="post">
+                        <form method="post" action="php/register.php">
                             <div class="input-box">
                                 <label class="label-text">Name</label>
                                 <div class="form-group">
